python/testing_linting_output.txt
testing_linting.py - Phase 4 bundle #28.
Every value below is computed by this file (pytest/ruff/mypy invoked on
tiny inline samples in a /tmp scratch dir); the .md guide pastes it verbatim.
Nothing is hand-computed.
Python 3.13.5 on this machine. Scratch: /var/folders/hd/20zqmjkj7cd0wm4rv2230bm00000gn/T/bundle28_cqr92zkz

======================================================================
SECTION A - pytest basics: test functions and exit codes
======================================================================
pytest discovers functions named test_*. Each runs its asserts;
exit code 0 = all passed (ExitCode.OK), 1 = some failed
(ExitCode.TESTS_FAILED). Below: pytest.main on a passing then a
deliberately-failing test file.

--- pytest on test_pass.py (2 passing tests) ---
..
2 passed in <duration>s

[check] 2 passing tests -> exit code 0 (ExitCode.OK): OK
[check] output reports '2 passed': OK
--- pytest on test_fail.py (1 deliberately failing test) ---
F
=================================== FAILURES ===================================
_________________________________ test_broken __________________________________

    def test_broken():
>       assert 1 + 1 == 3
E       assert (1 + 1) == 3

<tmpdir>/test_fail.py:2: AssertionError
=========================== short test summary info ============================
FAILED ../../../../..<tmpdir>/test_fail.py::test_broken
1 failed in <duration>s

[check] 1 failing test -> exit code 1 (ExitCode.TESTS_FAILED): OK
[check] output reports '1 failed': OK

======================================================================
SECTION B - Fixtures: dependency injection by name
======================================================================
A @pytest.fixture function is injected into any test that lists its
NAME as a parameter - no imports, no wiring. pytest sees 'sample' in
the signature, finds the fixture, calls it, and passes the return
value in.

--- pytest on test_fix.py ---
.
1 passed in <duration>s

[check] fixture 'sample' injected by name -> exit code 0: OK
[check] the fixture value [1,2,3] flowed into the test: OK

======================================================================
SECTION C - @pytest.mark.parametrize: one run per data row
======================================================================
@parametrize(argnames, argvalues) runs the test ONCE per row in
argvalues, injecting each row as arguments. 4 rows -> 4 test runs.

--- pytest on test_pm.py (4 param rows) ---
....
4 passed in <duration>s

[check] parametrized test ran once per row -> exit code 0: OK
[check] collected count == number of param rows (4): OK

======================================================================
SECTION D - monkeypatch: temporary attribute/env patches, auto-restored
======================================================================
The monkeypatch fixture sets attrs/dict-items/env-vars for the test
duration, then UNDOES them at teardown. Below, test 1 patches an env
var and math.pi; test 2 asserts both are gone - proving teardown.

--- pytest on test_mp.py (patch + restore) ---
..
2 passed in <duration>s

[check] monkeypatch took effect during test 1 -> exit code 0: OK
[check] both tests passed (patch auto-restored before test 2): OK

======================================================================
SECTION E - tmp_path & capsys: built-in fixtures
======================================================================
tmp_path yields a fresh pathlib.Path temp dir (unique per test).
capsys captures stdout/stderr written during the test via
capsys.readouterr(). Both are built-in - no plugin needed.

--- pytest on test_tp.py (tmp_path + capsys) ---
..
2 passed in <duration>s

[check] tmp_path file round-trip + capsys capture -> exit code 0: OK
[check] both built-in fixture tests passed: OK

======================================================================
SECTION F - ruff: lint + format (replaces flake8 + isort + black)
======================================================================
ruff is ONE Rust binary that lints (rules like F401 unused import)
AND formats (Black-compatible). It replaces flake8, isort, black,
pydocstyle and more. Below: ruff check flags an unused import;
ruff format --check flags code that needs reformatting.

--- ruff check on bad.py (unused import) ---
F401 [*] `os` imported but unused
 --> <tmpdir>/bad.py:1:8
  |
1 | import os
  |        ^^
2 | x = 1
  |
help: Remove unused import: `os`

Found 1 error.
[*] 1 fixable with the `--fix` option.

[check] ruff flags unused import -> exit code 1: OK
[check] ruff reports rule F401 'imported but unused': OK
--- ruff format --check on ugly.py (needs formatting) ---
Would reformat: <tmpdir>/ugly.py
1 file would be reformatted

[check] ruff format flags unformatted code -> exit code 1: OK
[check] ruff format reports 'Would reformat': OK

======================================================================
SECTION G - mypy: static type checking (catches type errors before runtime)
======================================================================
mypy reads your type annotations and reports type errors WITHOUT
running the code. Below: assigning a str to an int variable is an
error (exit 1); the correct annotation passes (exit 0, 'Success').

--- mypy on bad_typed.py (str assigned to int) ---
<tmpdir>/bad_typed.py:1: error: Incompatible types in assignment (expression has type "str", variable has type "int")  [assignment]
Found 1 error in 1 file (checked 1 source file)

[check] mypy flags type error -> exit code 1: OK
[check] mypy reports 'error:' (Incompatible types): OK
--- mypy on good_typed.py (correct) ---
Success: no issues found in 1 source file

[check] mypy passes correctly-typed code -> exit code 0: OK
[check] mypy reports 'Success': OK

======================================================================
SECTION H - coverage.py & the red->green->refactor loop
======================================================================
coverage.py measures which lines/branches your tests EXECUTE; the
pytest-cov plugin wires it into pytest (--cov). The goal is
MEANINGFUL coverage, not 100%. The discipline that drives it is the
red->green->refactor loop, demonstrated live below:
  1. RED   - write a test for a buggy impl; watch it fail.
  2. GREEN - fix the impl; watch the same test pass.
  3. REFACTOR - clean up with the test as a safety net.

--- RED: impl.py returns x+x (square(4)==8, not 16) ---
F
=================================== FAILURES ===================================
_________________________________ test_square __________________________________

    def test_square():
>       assert square(4) == 16
E       assert 8 == 16
E        +  where 8 = square(4)

<tmpdir>/test_impl.py:3: AssertionError
=========================== short test summary info ============================
FAILED ../../../../..<tmpdir>/test_impl.py::test_square
1 failed in <duration>s

[check] RED: buggy impl -> test fails (exit code 1): OK
--- GREEN: impl.py fixed to x*x (square(4)==16) ---
.
1 passed in <duration>s

[check] GREEN: fixed impl -> same test passes (exit code 0): OK

======================================================================
SECTION DONE - all sections printed
======================================================================
